fix word wrapping

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ nav {
 }
 
 section {
+  word-wrap: break-word;
   padding-top: 1em;
   padding-bottom: 1em;
 }
